--- a/projets.html
+++ b/projets.html
@@ -41,8 +41,8 @@
   <div class="projets-grid">
     <!-- EXEMPLE DE PROJET -->
     <div class="projets-card" data-cat="ecole">
-      <a href="projets/gsb.html" class="projets-card" data-cat="ecole">
-      <img src="images/gsb.png" alt="Portfolio" class="projets-img"></a>  
+      <a href="/Projets/gsb.html" class="projets-card" data-cat="ecole">
+      <img src="/images/gsb.png" alt="Portfolio" class="projets-img"></a>  
       <div class="projets-contenu">
         <span class="projets-categorie">Projet d'école en collaboration.</span>
         <h3 class="projets-titre-card">Projet GSB</h3>
@@ -51,8 +51,8 @@
        
     </div>
     <div class="projets-card" data-cat="entreprise">
-      <a href="projets/centreon.html" class="projets-card" data-cat="ecole">
-      <img src="images/centreon.png" alt="Linux" class="projets-img"></a>
+      <a href="/Projets/centreon.html" class="projets-card" data-cat="ecole">
+      <img src="/images/centreon.png" alt="Linux" class="projets-img"></a>
       <div class="projets-contenu">
         <span class="projets-categorie">Projet d'alternance</span>
         <h3 class="projets-titre-card">Centreon</h3>
@@ -60,8 +60,8 @@
       </div>
     </div>
     <div class="projets-card" data-cat="seul">
-      <a href="projets/veille.html" class="projets-card" data-cat="ecole">
-      <img src="images/make.png" alt="Python" class="projets-img"></a>
+      <a href="/Projets/veille.html" class="projets-card" data-cat="ecole">
+      <img src="/images/make.png" alt="Python" class="projets-img"></a>
       <div class="projets-contenu">
         <span class="projets-categorie">Projet en autonomie</span>
         <h3 class="projets-titre-card">Veille technologique</h3>
@@ -69,8 +69,8 @@
       </div>
     </div>
     <div class="projets-card" data-cat="entreprise">
-      <a href="projets/passbolt.html" class="projets-card" data-cat="ecole">
-      <img src="images/passbolt.png" alt="Python" class="projets-img"></a>
+      <a href="/Projets/passbolt.html" class="projets-card" data-cat="ecole">
+      <img src="/images/passbolt.png" alt="Python" class="projets-img"></a>
       <div class="projets-contenu">
         <span class="projets-categorie">Projet d'alternance</span>
         <h3 class="projets-titre-card">Passbolt</h3>
@@ -78,8 +78,8 @@
       </div>
     </div>
     <div class="projets-card" data-cat="entreprise">
-      <a href="projets/vpn.html" class="projets-card" data-cat="ecole">
-      <img src="images/vpn.png" alt="Python" class="projets-img"></a>
+      <a href="/Projets/vpn.html" class="projets-card" data-cat="ecole">
+      <img src="/images/vpn.png" alt="Python" class="projets-img"></a>
       <div class="projets-contenu">
         <span class="projets-categorie">Projet d'alternance</span>
         <h3 class="projets-titre-card">VPN</h3>
@@ -87,8 +87,8 @@
       </div>
     </div>
     <div class="projets-card" data-cat="entreprise">
-      <a href="projets/bgp.html" class="projets-card" data-cat="ecole">
-      <img src="images/bgp.png" alt="Python" class="projets-img"></a>
+      <a href="/Projets/bgp.html" class="projets-card" data-cat="ecole">
+      <img src="/images/bgp.png" alt="Python" class="projets-img"></a>
       <div class="projets-contenu">
         <span class="projets-categorie">Projet d'alternance</span>
         <h3 class="projets-titre-card">BGP</h3>
@@ -96,8 +96,8 @@
       </div>
     </div>
     <div class="projets-card" data-cat="entreprise">
-      <a href="projets/ospf.html" class="projets-card" data-cat="ecole">
-      <img src="images/ospf.png" alt="Python" class="projets-img"></a>
+      <a href="/Projets/ospf.html" class="projets-card" data-cat="ecole">
+      <img src="/images/ospf.png" alt="Python" class="projets-img"></a>
       <div class="projets-contenu">
         <span class="projets-categorie">Projet d'alternance</span>
         <h3 class="projets-titre-card">OSPF</h3>
@@ -105,8 +105,8 @@
       </div>
     </div>
     <div class="projets-card" data-cat="entreprise">
-      <a href="projets/ips.html" class="projets-card" data-cat="ecole">
-      <img src="images/python.png" alt="Python" class="projets-img"></a>
+      <a href="/Projets/ips.html" class="projets-card" data-cat="ecole">
+      <img src="/images/python.png" alt="Python" class="projets-img"></a>
       <div class="projets-contenu">
         <span class="projets-categorie">Projet d'alternance</span>
         <h3 class="projets-titre-card">Projet IPS</h3>
@@ -114,8 +114,8 @@
       </div>
     </div>
     <div class="projets-card" data-cat="ecole">
-      <a href="projets/tamaran.html" class="projets-card" data-cat="ecole">
-      <img src="images/tamaran.png" alt="Python" class="projets-img"></a>
+      <a href="/Projets/tamaran.html" class="projets-card" data-cat="ecole">
+      <img src="/images/" alt="Python" class="projets-img"></a>
       <div class="projets-contenu">
         <span class="projets-categorie">Projet d'école</span>
         <h3 class="projets-titre-card">Projet TAMARAN</h3>
