--- a/projets.html
+++ b/projets.html
@@ -51,7 +51,7 @@
        
     </div>
     <div class="projets-card" data-cat="entreprise">
-      <a href="/Projets/centreon.html" class="projets-card" data-cat="ecole">
+      <a href="centreon.html" class="projets-card" data-cat="ecole">
       <img src="/images/centreon.png" alt="Linux" class="projets-img"></a>
       <div class="projets-contenu">
         <span class="projets-categorie">Projet d'alternance</span>
@@ -60,7 +60,7 @@
       </div>
     </div>
     <div class="projets-card" data-cat="seul">
-      <a href="/Projets/veille.html" class="projets-card" data-cat="ecole">
+      <a href="veille.html" class="projets-card" data-cat="ecole">
       <img src="/images/make.png" alt="Python" class="projets-img"></a>
       <div class="projets-contenu">
         <span class="projets-categorie">Projet en autonomie</span>
@@ -69,7 +69,7 @@
       </div>
     </div>
     <div class="projets-card" data-cat="entreprise">
-      <a href="/Projets/passbolt.html" class="projets-card" data-cat="ecole">
+      <a href="passbolt.html" class="projets-card" data-cat="ecole">
       <img src="/images/passbolt.png" alt="Python" class="projets-img"></a>
       <div class="projets-contenu">
         <span class="projets-categorie">Projet d'alternance</span>
@@ -78,7 +78,7 @@
       </div>
     </div>
     <div class="projets-card" data-cat="entreprise">
-      <a href="/Projets/vpn.html" class="projets-card" data-cat="ecole">
+      <a href="vpn.html" class="projets-card" data-cat="ecole">
       <img src="/images/vpn.png" alt="Python" class="projets-img"></a>
       <div class="projets-contenu">
         <span class="projets-categorie">Projet d'alternance</span>
@@ -87,7 +87,7 @@
       </div>
     </div>
     <div class="projets-card" data-cat="entreprise">
-      <a href="/Projets/bgp.html" class="projets-card" data-cat="ecole">
+      <a href="bgp.html" class="projets-card" data-cat="ecole">
       <img src="/images/bgp.png" alt="Python" class="projets-img"></a>
       <div class="projets-contenu">
         <span class="projets-categorie">Projet d'alternance</span>
@@ -96,7 +96,7 @@
       </div>
     </div>
     <div class="projets-card" data-cat="entreprise">
-      <a href="/Projets/ospf.html" class="projets-card" data-cat="ecole">
+      <a href="ospf.html" class="projets-card" data-cat="ecole">
       <img src="/images/ospf.png" alt="Python" class="projets-img"></a>
       <div class="projets-contenu">
         <span class="projets-categorie">Projet d'alternance</span>
@@ -105,7 +105,7 @@
       </div>
     </div>
     <div class="projets-card" data-cat="entreprise">
-      <a href="/Projets/ips.html" class="projets-card" data-cat="ecole">
+      <a href="ips.html" class="projets-card" data-cat="ecole">
       <img src="/images/python.png" alt="Python" class="projets-img"></a>
       <div class="projets-contenu">
         <span class="projets-categorie">Projet d'alternance</span>
@@ -114,7 +114,7 @@
       </div>
     </div>
     <div class="projets-card" data-cat="ecole">
-      <a href="/Projets/tamaran.html" class="projets-card" data-cat="ecole">
+      <a href="tamaran.html" class="projets-card" data-cat="ecole">
       <img src="/images/" alt="Python" class="projets-img"></a>
       <div class="projets-contenu">
         <span class="projets-categorie">Projet d'école</span>
@@ -175,3 +175,4 @@ filtreBtns.forEach(btn => {
   <script src="script.js"></script>
 </body>
 </html>
+
