--- a/projets.html
+++ b/projets.html
@@ -41,7 +41,7 @@
   <div class="projets-grid">
     <!-- EXEMPLE DE PROJET -->
     <div class="projets-card" data-cat="ecole">
-      <a href="/Projets/gsb.html" class="projets-card" data-cat="ecole">
+      <a href="gsb.html" class="projets-card" data-cat="ecole">
       <img src="/images/gsb.png" alt="Portfolio" class="projets-img"></a>  
       <div class="projets-contenu">
         <span class="projets-categorie">Projet d'école en collaboration.</span>
@@ -52,7 +52,7 @@
     </div>
     <div class="projets-card" data-cat="entreprise">
       <a href="centreon.html" class="projets-card" data-cat="ecole">
-      <img src="/images/centreon.png" alt="Linux" class="projets-img"></a>
+      <img src="centreon.png" alt="Linux" class="projets-img"></a>
       <div class="projets-contenu">
         <span class="projets-categorie">Projet d'alternance</span>
         <h3 class="projets-titre-card">Centreon</h3>
@@ -175,4 +175,5 @@ filtreBtns.forEach(btn => {
   <script src="script.js"></script>
 </body>
 </html>
+
 
